fixed spacing
changed fonts

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,24 +9,29 @@
 h1,
 h2,
 h3 {
-
+    padding-top: 20px;
   margin: 0;
+  
 }
 
 h1 {
-  font-size: 96px;
+    
+  font-size: 48px;
   line-height: 1;
+  font-family:'Rubik', sans-serif;
 }
 
 
 
 h2 {
-  font-size: 48px;
+  font-size: 36px;
+  font-family: 'Abel', sans-serif;
 }
 
 h3 {
   font-size: 24px;
   opacity: 0.7;
+  font-family: 'Abel', sans-serif;
 }
 .nav-links {
   display: flex;
@@ -70,12 +75,13 @@ body {
   display: block;
 }
 
-p {
+p, li {
   text-align: center;
   padding: 20px;
   border-radius: 4px;
   font-size: 18px;
   line-height: 1.5;
+  font-family:'Rubik', sans-serif;
   color: var(--primary-color);
 
 }
